--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gaea-preview",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "盖亚-查看器",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -13,6 +13,10 @@
   ],
   "author": "ascoders",
   "license": "ISC",
-  "dependencies": {},
-  "peerDependencies": {}
+  "dependencies": {
+    "classnames": "^2.2.5"
+  },
+  "peerDependencies": {
+    "react": "^0.14.0 || ^15.0.0"
+  }
 }
