--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gaea-preview",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "盖亚-查看器",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -14,8 +14,8 @@
   "author": "ascoders",
   "license": "ISC",
   "dependencies": {
-    "classnames": "^2.2.5",
-    "nt-transparently-props": "^0.0.1"
+    "lodash": "^4.15.0",
+    "nt-transparently-props": "^0.0.2"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0"
