--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gaea-preview",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "盖亚-查看器",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -15,7 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.15.0",
-    "gaea-model": "^0.0.9"
+    "lz-string": "^1.4.4",
+    "gaea-model": "^0.0.10"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0"
